<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/etqlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="532dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtmodeloetq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="MODELO ETIQUETAS"
        android:textColor="#303030"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtItemname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtcardretir"
        android:textColor="#303030"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtmodeloetq" />

    <EditText
        android:id="@+id/edtretcajas"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:inputType="number"
        android:textColor="#303030"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/edtretetq"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:inputType="number"
        android:textColor="#303030"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/edtticajas"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="12dp"
        android:inputType="number"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/edtubiitem"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginStart="276dp"
        android:layout_marginTop="12dp"
        android:inputType="number"
        android:textColor="#303030"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/edtasiggesl"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="148dp"
        android:inputType="text"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:textColor="#303030"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/edtdesasiggesl"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="264dp"
        android:inputType="text"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:textColor="#303030"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/edtasigcajas"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:inputType="number"
        android:textColor="#303030"
        app:layout_constraintStart_toEndOf="@+id/edtasiggesl"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <EditText
        android:id="@+id/edtdesasigcajas"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="128dp"
        android:inputType="number"
        android:textColor="#303030"
        app:layout_constraintStart_toEndOf="@+id/edtasiggesl"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <EditText
        android:id="@+id/edtasigetq"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="12dp"
        android:inputType="number"
        android:textColor="#303030"
        app:layout_constraintStart_toEndOf="@+id/edtasiggesl"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <EditText
        android:id="@+id/edtdesasigetq"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="128dp"
        android:inputType="number"
        android:textColor="#303030"
        app:layout_constraintStart_toEndOf="@+id/edtasiggesl"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="276dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtcardetqs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtcardcajas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/txtcardasig"
        android:textColor="#303030"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtretcajas" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="144dp"
        android:text="@string/txtcarddesasig"
        android:textColor="#303030"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtretcajas" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:text="@string/txtcardcajasgsl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtcardcajasgsl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtcardcajas"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="128dp"
        android:text="@string/txtcardcajas"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtcardetqs"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="128dp"
        android:text="@string/txtcardetqs"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtcardtienda"
        android:textColor="#303030"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtmodeloetq" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtcardetqs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtItemname" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtcardcajas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtItemname" />

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="284dp"
        android:background="#2C2C2C"
        android:backgroundTint="#1E1D1D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/butcardcamara"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/camara"
        android:enabled="true"
        app:layout_constraintBottom_toTopOf="@+id/space"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/butcardimage"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/photo"
        android:backgroundTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/space"
        app:layout_constraintStart_toEndOf="@+id/butcardcamara" />

    <Button
        android:id="@+id/butetqsave"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/save_icon"
        app:layout_constraintBottom_toTopOf="@+id/space"
        app:layout_constraintStart_toEndOf="@+id/butcardimage" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#505050"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>